# ktbind

./: LICENSE  README.md
cpp/: CMakeLists.txt
cpp/include/ktbind/: ktbind.hpp
cpp/test/: java.cpp
kotlin/: build.gradle.kts
kotlin/src/test/kotlin/com/kheiron/ktbind/: NativeBindingsTest.kt
